@@ -786,6 +786,14 @@
 								<td><input type="input" id="CostEnergyT2" name="CostEnergyT2" style="width: 60px; padding: .2em;" class="text ui-widget-content ui-corner-all" /> / kWh</td>
 							</tr>
 							<tr>
+								<td></td>
+								<td></td>
+								<td align="right" style="width:90px"><label><span data-i18n="Costs"></span> R1: </label></td>
+								<td><input type="input" id="CostEnergyR1" name="CostEnergyR1" style="width: 60px; padding: .2em;" class="text ui-widget-content ui-corner-all" /> / kWh</td>
+								<td align="right" style="width:90px"><label><span data-i18n="Costs"></span> R2: </label></td>
+								<td><input type="input" id="CostEnergyR2" name="CostEnergyR2" style="width: 60px; padding: .2em;" class="text ui-widget-content ui-corner-all" /> / kWh</td>
+							</tr>
+							<tr>
 								<td align="right" style="width:60px"><label><span data-i18n="Gas"></span>: </label></td>
 								<td><input type="input" id="GasDivider" name="GasDivider" style="width: 80px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
 								<td align="right" style="width:60px"><label><span data-i18n="Costs"></span>: </label></td>
